--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
       margin: 5px 5px 5px 0;
       cursor: pointer;
     }
+
+    /* tips */
+    #tip {
+      background-color: #ddf;
+      color: #333;
+      border: 1px solid silver;
+      box-shadow: 3px 4px 3px 0px silver;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      border-radius: 5px;
+      overflow: hidden;
+      line-height: 20px;
+    }
+    #tip input[type="text"] {
+      height: 25px;
+      border: 0;
+      padding-left: 5px;
+      width: 280px;
+      border-radius: 3px;
+      outline: none;
+    }
   </style>
 </head>
 <body>
@@ -125,6 +147,9 @@
       <input type="text" placeholder="内容">
       <button onclick="getPosition()">ADD</button>
     </form>
+  </div>
+  <div id="tip">
+    <input type="text" id="keyword" name="keyword" value="请输入关键字：(选定后搜索)" onfocus='this.value=""'/>
   </div>
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=924d36085a8b86a109b7d80f4ca59282"></script> 
   <script type="text/javascript" src="json.js"></script> 
@@ -265,6 +290,24 @@
         addMark(markerArr[i])
       }
     }
+
+    // 输入提示和POI搜索插件结合使用
+    AMap.plugin(['AMap.Autocomplete','AMap.PlaceSearch'],function(){
+      var autoOptions = {
+        city: "北京", //城市，默认全国
+        input: "keyword"//使用联想输入的input的id
+      };
+      autocomplete= new AMap.Autocomplete(autoOptions);
+      var placeSearch = new AMap.PlaceSearch({
+        city:'北京',
+        map:map
+      })
+      AMap.event.addListener(autocomplete, "select", function(e){
+        //TODO 针对选中的poi实现自己的功能
+        placeSearch.setCity(e.poi.adcode);
+        placeSearch.search(e.poi.name)
+      });
+    });
   </script>
 </body>
 </html>
